--- a/打字.html
+++ b/打字.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <title>专业打字练习器</title>
+    <meta charset="UTF-8">                                                            
+    <title>专业打字练习器</title>    专业打字练习器    专业打字练习器    专业打字练习器    专业打字练习器    专业打字练习器    专业打字练习器    专业打字练习器
     <style>
         :root {
-            --primary-color: #3498db;
-            --success-color: #2ecc71;
-            --error-color: #e74c3c;
-            --bg-color: #f8f9fa;
-            --text-color: #2c3e50;
+            --primary-color: #3498db;            --primary-color: #3498db;            --primary-color: #3498db;            --primary-color: #3498db;            --primary-color: #3498db;            --primary-color: #3498db;            --primary-color: #3498db;            --primary-color: #3498db;            --primary-color: #3498db;            --primary-color: #3498db;            --primary-color: #3498db;            --primary-color: #3498db;            --primary-color: #3498db;            --primary-color: #3498db;            --primary-color: #3498db;            --primary-color: #3498db;
+            --success-color: #2ecc71;            --success-color: #2ecc71;            --success-color: #2ecc71;            --success-color: #2ecc71;            --success-color: #2ecc71;            --success-color: #2ecc71;            --success-color: #2ecc71;            --success-color: #2ecc71;            --success-color: #2ecc71;            --success-color: #2ecc71;            --success-color: #2ecc71;            --success-color: #2ecc71;            --success-color: #2ecc71;            --success-color: #2ecc71;            --success-color: #2ecc71;            --success-color: #2ecc71;
+            --error-color: #e74c3c;            --error-color: #e74c3c;            --error-color: #e74c3c;            --error-color: #e74c3c;            --error-color: #e74c3c;            --error-color: #e74c3c;            --error-color: #e74c3c;            --error-color: #e74c3c;            --error-color: #e74c3c;            --error-color: #e74c3c;            --error-color: #e74c3c;            --error-color: #e74c3c;            --error-color: #e74c3c;            --error-color: #e74c3c;            --error-color: #e74c3c;            --error-color: #e74c3c;
+            --bg-color: #f8f9fa;            --bg-color: #f8f9fa;            --bg-color: #f8f9fa;            --bg-color: #f8f9fa;            --bg-color: #f8f9fa;            --bg-color: #f8f9fa;            --bg-color: #f8f9fa;            --bg-color: #f8f9fa;            --bg-color: #f8f9fa;            --bg-color: #f8f9fa;            --bg-color: #f8f9fa;            --bg-color: #f8f9fa;            --bg-color: #f8f9fa;            --bg-color: #f8f9fa;            --bg-color: #f8f9fa;            --bg-color: #f8f9fa;
+            --text-color: #2c3e50;            --text-color: #2c3e50;            --text-color: #2c3e50;            --text-color: #2c3e50;            --text-color: #2c3e50;            --text-color: #2c3e50;            --text-color: #2c3e50;            --text-color: #2c3e50;            --text-color: #2c3e50;            --text-color: #2c3e50;            --text-color: #2c3e50;            --text-color: #2c3e50;            --text-color: #2c3e50;            --text-color: #2c3e50;            --text-color: #2c3e50;            --text-color: #2c3e50;
         }
 
         body {
-            font-family: 'Segoe UI', system-ui, sans-serif;
-            max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
-            background: var(--bg-color);
-            color: var(--text-color);
+            font-family: 'Segoe UI', system-ui, sans-serif;            font-family: 'Segoe UI', system-ui, sans-serif;            font-family: 'Segoe UI', system-ui, sans-serif;            font-family: 'Segoe UI', system-ui, sans-serif;            font-family: 'Segoe UI', system-ui, sans-serif;            font-family: 'Segoe UI', system-ui, sans-serif;            font-family: 'Segoe UI', system-ui, sans-serif;            font-family: 'Segoe UI', system-ui, sans-serif;            font-family: 'Segoe UI', system-ui, sans-serif;            font-family: 'Segoe UI', system-ui, sans-serif;            font-family: 'Segoe UI', system-ui, sans-serif;            font-family: 'Segoe UI', system-ui, sans-serif;            font-family: 'Segoe UI', system-ui, sans-serif;            font-family: 'Segoe UI', system-ui, sans-serif;            font-family: 'Segoe UI', system-ui, sans-serif;            font-family: 'Segoe UI', system-ui, sans-serif;
+            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;
+            margin: 50px auto;            margin: 50px auto;            margin: 50px auto;            margin: 50px auto;            margin: 50px auto;            margin: 50px auto;            margin: 50px auto;            margin: 50px auto;            margin: 50px auto;            margin: 50px auto;            margin: 50px auto;            margin: 50px auto;            margin: 50px auto;            margin: 50px auto;            margin: 50px auto;            margin: 50px auto;
+            padding: 20px;            padding: 20px;            padding: 20px;            padding: 20px;            padding: 20px;            padding: 20px;            padding: 20px;            padding: 20px;            padding: 20px;            padding: 20px;            padding: 20px;            padding: 20px;            padding: 20px;            padding: 20px;            padding: 20px;            padding: 20px;
+            background: var(--bg-color);            background: var(--bg-color);            background: var(--bg-color);            background: var(--bg-color);            background: var(--bg-color);            background: var(--bg-color);            background: var(--bg-color);            background: var(--bg-color);            background: var(--bg-color);            background: var(--bg-color);            background: var(--bg-color);            background: var(--bg-color);            background: var(--bg-color);            background: var(--bg-color);            background: var(--bg-color);            background: var(--bg-color);
+            color: var(--text-color);            color: var(--text-color);            color: var(--text-color);            color: var(--text-color);            color: var(--text-color);            color: var(--text-color);            color: var(--text-color);            color: var(--text-color);            color: var(--text-color);            color: var(--text-color);            color: var(--text-color);            color: var(--text-color);            color: var(--text-color);            color: var(--text-color);            color: var(--text-color);            color: var(--text-color);
         }
 
-        .container {
-            width: 100%;
-            max-width: 800px;
-            margin: 0 auto;
+        .container {        .container {        .container {        .container {        .container {        .container {        .container {        .container {        .container {        .container {        .container {        .container {        .container {        .container {        .container {        .container {
+            width: 100%;            width: 100%;            width: 100%;            width: 100%;            width: 100%;            width: 100%;            width: 100%;            width: 100%;            width: 100%;            width: 100%;            width: 100%;            width: 100%;            width: 100%;            width: 100%;            width: 100%;            width: 100%;
+            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;            max-width: 800px;
+            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;
         }
 
-        .content-wrapper {
-            width: calc(100% - 50px);
-            margin: 0 auto;
+        .content-wrapper {        .content-wrapper {        .content-wrapper {        .content-wrapper {        .content-wrapper {        .content-wrapper {        .content-wrapper {        .content-wrapper {        .content-wrapper {        .content-wrapper {        .content-wrapper {        .content-wrapper {        .content-wrapper {        .content-wrapper {        .content-wrapper {        .content-wrapper {
+            width: calc(100% - 50px);            width: calc(100% - 50px);            width: calc(100% - 50px);            width: calc(100% - 50px);            width: calc(100% - 50px);            width: calc(100% - 50px);            width: calc(100% - 50px);            width: calc(100% - 50px);            width: calc(100% - 50px);            width: calc(100% - 50px);            width: calc(100% - 50px);            width: calc(100% - 50px);            width: calc(100% - 50px);            width: calc(100% - 50px);            width: calc(100% - 50px);            width: calc(100% - 50px);
+            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;            margin: 0 auto;
         }
 
-        .file-upload {
-            background: white;
+        .file-upload {        .file-upload {        .file-upload {        .file-upload {        .file-upload {        .file-upload {        .file-upload {        .file-upload {        .file-upload {        .file-upload {        .file-upload {        .file-upload {        .file-upload {        .file-upload {        .file-upload {        .file-upload {
+            background: white;            background: white;            background: white;            background: white;            background: white;            background: white;            background: white;            background: white;            background: white;            background: white;            background: white;            background: white;            background: white;            background: white;            background: white;            background: white;
             padding: 20px;
             border-radius: 12px;
             box-shadow: 0 4px 6px rgba(0,0,0,0.05);
@@ -429,3 +429,4 @@
     </script>
 </body>
 </html>
+git rm <打字.html>
